--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,11 @@
 /* styles go here */
-label {
+.container {
   display: block;
   margin-bottom: 10px;
 
 }
 
-fieldset {
+.fieldSet {
   margin-bottom: 20px;
   padding-bottom: 0;
 }
